# data_transfer_monitoring

./: .gitignore  Dockerfile  README.md  alloy-config.hcl  aws_client.py  docker-compose.yml  local_producers.py  loki-config.yaml  main.py  prometheus.yml  promtail-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: endReadout.json  expectedSensor.json  fileNotifications.json
k8s/: dep.yaml
kubernetes/overlays/prod/: Makefile  deployment.yaml  kustomization.yaml  ns.yaml
listeners/: base_listener.py  end_readout.py  file_notifications.py
localstack-init/: init-s3.sh
models/: end_readout.py  expected_sensors.py  file_notification.py
shared/: aws_client.py  config.py  constants.py  log.py  metrics.py  persistent_state_manager.py  s3_client.py  s3_metrics_processor.py  task_processor.py
shared/metrics/: kafka_metrics.py  s3_metrics.py
shared/notifications/: notification_tracker.py
shared/notifications/stores/: abstract_notification_store.py  memory_notification_store.py  postgres_notification_store.py
shared/utils/: day_of_observation.py  string_to_bool.py  time_conversions.py
tests/: emulator.py
tests/fake_data/: create_fake_data.py  data_creator.py  end_readout.py  expected_sensors.py  file_notification.py
